--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mysql2": "^3.11.3",
+    "net": "^1.0.2",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.6",
