--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@replit/repl-auth": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "net": "^1.0.2",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "replit-auth": "^5.0.3",
     "tailwindcss": "^3.4.1",
     "tls": "^0.0.1"
   },
